<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.LandingActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        app:srcCompat="@drawable/logo_storyapp" />

    <TextView
        android:id="@+id/landing_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang_di_story_app"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintVertical_bias="0.120000005"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/landing_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ekspresikan_hari_hari_mu"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_tittle"
        app:layout_constraintVertical_bias="0.0"
        android:alpha="0"
        tools:alpha="100"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77">

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:alpha="0"
            tools:alpha="100"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/sign_in"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/sign_up"
            android:textColor="@color/light_blue"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            android:alpha="0"
            tools:alpha="100"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>